package BirdsOOPS;

public interface CanEat {
	void eat();
}
