package BirdsOOPS;

public interface CanFly {
	void  fly();
}
