package BirdsOOPS;

public interface CanSpeak {
	void speak();
}
