package BirdsOOPS;

public class FastGlide implements FlightMode {
	@Override
	public void performFlight() {}
}