package BirdsOOPS;

public class FlapAndGlide implements FlightMode {
	@Override
	public void performFlight() {}
}