package BirdsOOPS;

public interface FlightMode {
	void performFlight();
}
