package BirdsOOPS;

public class Parrot extends Creature implements CanEat,CanFly,CanSpeak{
	@Override
	public void eat(){};

	@Override
	public void fly(){}

	@Override
	public void speak(){}
}
