package BirdsOOPS;


public class Penguin extends Creature implements CanEat {

	@Override
	public void eat() {}
}