package BirdsOOPS;

public class Whale extends Creature implements CanEat, CanSpeak {

	@Override
	public void eat() {
	}

	@Override
	public void speak() {
	}

}